Autenticacion y Registro de usuario. Esquema general Web

--- a/WebApplication/Pages/User/App_LocalResources/Authentication.aspx.gl.resx
+++ b/WebApplication/Pages/User/App_LocalResources/Authentication.aspx.gl.resx
@@ -142,6 +142,6 @@
     <value>Rexistrarme (usuario non rexistrado)</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
-    <value>PracticaMaD - Página de Autenticación</value>
+    <value>Photogram - Página de Autenticación</value>
   </data>
 </root>
