--- a/WebApplication/Pages/User/App_LocalResources/Authentication.aspx.resx
+++ b/WebApplication/Pages/User/App_LocalResources/Authentication.aspx.resx
@@ -142,6 +142,6 @@
     <value>Register (user not registered)</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
-    <value>PracticaMaD - Authentication Page</value>
+    <value>Photogram - Authentication Page</value>
   </data>
 </root>
