--- a/WebApplication/Pages/User/App_LocalResources/ChangePassword.aspx.es.resx
+++ b/WebApplication/Pages/User/App_LocalResources/ChangePassword.aspx.es.resx
@@ -142,6 +142,6 @@
     <value>Reescriba la contraseña</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
-    <value>PracticaMaD - Cambiar contraseña</value>
+    <value>Photogram - Cambiar contraseña</value>
   </data>
 </root>
