--- a/WebApplication/Pages/User/App_LocalResources/ChangePassword.aspx.gl.resx
+++ b/WebApplication/Pages/User/App_LocalResources/ChangePassword.aspx.gl.resx
@@ -142,6 +142,6 @@
     <value>Reescriba o contrasinal</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
-    <value>PracticaMaD - Cambiar contrasinal</value>
+    <value>Photogram - Cambiar contrasinal</value>
   </data>
 </root>
