--- a/WebApplication/Pages/User/App_LocalResources/Register.aspx.es.resx
+++ b/WebApplication/Pages/User/App_LocalResources/Register.aspx.es.resx
@@ -147,70 +147,19 @@
   <data name="lclRetypePassword.Text" xml:space="preserve">
     <value>Repita la contraseña</value>
   </data>
-  <data name="IclAddress.Text" xml:space="preserve">
-    <value>Dirección</value>
-  </data>
   <data name="lclSurname.Text" xml:space="preserve">
     <value>Apellidos</value>
+  </data>
+  <data name="lclUserName.Text" xml:space="preserve">
+    <value>Nombre de usuario</value>
   </data>
   <data name="lnkUserExists.Text" xml:space="preserve">
     <value>Comprueba si un usuario existe</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
-    <value>PracticaMaD - Registro de Usuario</value>
-  </data>
-  <data name="lclUserName.Text" xml:space="preserve">
-    <value>Nombre de usuario</value>
+    <value>Photogram - Registro de Usuario</value>
   </data>
   <data name="revEmail.ErrorMessage" xml:space="preserve">
     <value>Sintaxis de email incorrecta</value>
-  </data>
-  <data name="lclCreditCard.Text" xml:space="preserve">
-    <value>Registrar Tarjeta de Crédito</value>
-  </data>
-  <data name="default" xml:space="preserve">
-    <value>Predeterminada</value>
-  </data>
-  <data name="lblNumberError.Text" xml:space="preserve">
-    <value>Tarjeta de Crédito ya existente</value>
-  </data>
-  <data name="lclCheckDefault.Text" xml:space="preserve">
-    <value>Tarjeta Predeterminada</value>
-  </data>
-  <data name="lclCreditNumber.Text" xml:space="preserve">
-    <value>Número de la Tarjeta de Crédito</value>
-  </data>
-  <data name="lclCreditType.Text" xml:space="preserve">
-    <value>Tipo de la Tarjeta de Crédito</value>
-  </data>
-  <data name="lclExpirationDate.Text" xml:space="preserve">
-    <value>Fecha de expiración de la Tarjeta de Crédito (MM/AA)</value>
-  </data>
-  <data name="lclVerificationCode.Text" xml:space="preserve">
-    <value>Código de verificación de la Tarjeta de Crédito</value>
-  </data>
-  <data name="revExpirationDate.ErrorMessage" xml:space="preserve">
-    <value>Sintaxis de fecha incorrecta</value>
-  </data>
-  <data name="revNumberError.ErrorMessage" xml:space="preserve">
-    <value>Solo números permitidos</value>
-  </data>
-  <data name="revNumberTamError.ErrorMessage" xml:space="preserve">
-    <value>Tarjeta Inválida</value>
-  </data>
-  <data name="revVerificationTamError.ErrorMessage" xml:space="preserve">
-    <value>Tamaño de código inválido</value>
-  </data>
-  <data name="lblOpcional.Text" xml:space="preserve">
-    <value>Opcional: Registrar Tarjeta de Crédito</value>
-  </data>
-  <data name="btnCancel.Text" xml:space="preserve">
-    <value>Cancelar</value>
-  </data>
-  <data name="lnkBack.Text" xml:space="preserve">
-    <value>Volver</value>
-  </data>
-  <data name="lblDateError.Text" xml:space="preserve">
-    <value>La fecha de expiración de la Tarjeta de Crédito es inválida</value>
   </data>
 </root>
