--- a/WebApplication/Pages/User/App_LocalResources/UpdateUserProfile.aspx.gl.resx
+++ b/WebApplication/Pages/User/App_LocalResources/UpdateUserProfile.aspx.gl.resx
@@ -129,9 +129,6 @@
   <data name="lclFirstName.Text" xml:space="preserve">
     <value>Nome</value>
   </data>
-  <data name="lclAddress.Text" xml:space="preserve">
-    <value>Dirección</value>
-  </data>
   <data name="lclLanguage.Text" xml:space="preserve">
     <value>Idioma</value>
   </data>
@@ -145,12 +142,9 @@
     <value>Cambiar contrasinal</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
-    <value>PracticaMaD - Actualizar información de usuario</value>
+    <value>Photogram - Actualizar información de usuario</value>
   </data>
   <data name="revEmail.ErrorMessage" xml:space="preserve">
     <value>Sintaxis de email incorrecta</value>
-  </data>
-  <data name="lnkListCreditCards.Text" xml:space="preserve">
-    <value>Tarxetas de Crédito do usuario</value>
   </data>
 </root>
