--- a/WebApplication/Pages/User/App_LocalResources/Authentication.aspx.es.resx
+++ b/WebApplication/Pages/User/App_LocalResources/Authentication.aspx.es.resx
@@ -142,6 +142,6 @@
     <value>Registrarme (usuario no registrado)</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
-    <value>PracticaMaD - Página de Autenticación</value>
+    <value>Photogram - Página de Autenticación</value>
   </data>
 </root>
