--- a/WebApplication/Pages/User/App_LocalResources/ChangePassword.aspx.resx
+++ b/WebApplication/Pages/User/App_LocalResources/ChangePassword.aspx.resx
@@ -142,6 +142,6 @@
     <value>Retype password</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
-    <value>PracticaMaD - Change Password</value>
+    <value>Photogram - Change Password</value>
   </data>
 </root>
