--- a/WebApplication/Pages/User/App_LocalResources/Register.aspx.gl.resx
+++ b/WebApplication/Pages/User/App_LocalResources/Register.aspx.gl.resx
@@ -147,8 +147,8 @@
   <data name="lclRetypePassword.Text" xml:space="preserve">
     <value>Repita o contrasinal</value>
   </data>
-  <data name="IclAddress.Text" xml:space="preserve">
-    <value>Dirección</value>
+  <data name="lclSurname.Text" xml:space="preserve">
+    <value>Apelidos</value>
   </data>
   <data name="lclUserName.Text" xml:space="preserve">
     <value>Nome de usuario</value>
@@ -156,64 +156,10 @@
   <data name="lnkUserExists.Text" xml:space="preserve">
     <value>Comproba si un usuario existe</value>
   </data>
-  <data name="lclSurname.Text" xml:space="preserve">
-    <value>Apelidos</value>
-  </data>
   <data name="Page.Title" xml:space="preserve">
-    <value>PracticaMaD - Rexistro de Usuario</value>
+    <value>Photogram - Rexistro de Usuario</value>
   </data>
   <data name="revEmail.ErrorMessage" xml:space="preserve">
     <value>Sintaxis de email incorrecta</value>
-  </data>
-  <data name="lclCreditCard.Text" xml:space="preserve">
-    <value>Rexistrar Tarxeta de Crédito</value>
-  </data>
-  <data name="default" xml:space="preserve">
-    <value>Predeterminada</value>
-  </data>
-  <data name="lblNumberError.Text" xml:space="preserve">
-    <value>Tarxeta de Crédito xa existente</value>
-  </data>
-  <data name="lclCheckDefault.Text" xml:space="preserve">
-    <value>Tarxeta Predeterminada</value>
-  </data>
-  <data name="lclCreditNumber.Text" xml:space="preserve">
-    <value>Número da Tarxeta de Crédito</value>
-  </data>
-  <data name="lclCreditType.Text" xml:space="preserve">
-    <value>Tipo da Tarxeta de Crédito</value>
-  </data>
-  <data name="lclExpirationDate.Text" xml:space="preserve">
-    <value>Data de expiración da Tarxeta de Crédito (MM/AA)</value>
-  </data>
-  <data name="lclMenuExplanation.Text1" xml:space="preserve">
-    <value>Rexistro da Tarxeta de Crédito</value>
-  </data>
-  <data name="lclVerificationCode.Text" xml:space="preserve">
-    <value>Código de verificación da Tarxeta de Crédito</value>
-  </data>
-  <data name="revExpirationDate.ErrorMessage" xml:space="preserve">
-    <value>Sintaxis da fecha incorrecta</value>
-  </data>
-  <data name="revNumberError.ErrorMessage" xml:space="preserve">
-    <value>Só números permitidos</value>
-  </data>
-  <data name="revNumberTamError.ErrorMessage" xml:space="preserve">
-    <value>Tarxeta Inválida</value>
-  </data>
-  <data name="revVerificationTamError.ErrorMessage" xml:space="preserve">
-    <value>Lonxitide de código inválido</value>
-  </data>
-  <data name="lblOpcional.Text" xml:space="preserve">
-    <value>Opcional: Rexistrar Tarxeta de Crédito</value>
-  </data>
-  <data name="btnCancel.Text" xml:space="preserve">
-    <value>Cancelar</value>
-  </data>
-  <data name="lnkBack.Text" xml:space="preserve">
-    <value>Volver</value>
-  </data>
-  <data name="lblDateError.Text" xml:space="preserve">
-    <value>A data de expiración da Tarxeta de Crédito é inválida</value>
   </data>
 </root>
