Subidos en la capa web la búsqueda de imagenes, detalles y comentarios v1

--- a/Web/App_GlobalResources/Common.resx
+++ b/Web/App_GlobalResources/Common.resx
@@ -117,10 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="categoryType" xml:space="preserve">
+    <value>CategoryType</value>
+  </data>
   <data name="mandatoryField" xml:space="preserve">
     <value>Mandatory Field</value>
   </data>
+  <data name="Next" xml:space="preserve">
+    <value>Next</value>
+  </data>
+  <data name="photoDate" xml:space="preserve">
+    <value>PhotoDate</value>
+  </data>
+  <data name="photoId" xml:space="preserve">
+    <value>PhotoId</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Previous</value>
+  </data>
   <data name="searchButton" xml:space="preserve">
     <value>Search</value>
+  </data>
+  <data name="title" xml:space="preserve">
+    <value>Title</value>
   </data>
 </root>
