--- a/Web/App_GlobalResources/Common.gl.resx
+++ b/Web/App_GlobalResources/Common.gl.resx
@@ -117,10 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="categoryType" xml:space="preserve">
+    <value>Categoría</value>
+  </data>
   <data name="mandatoryField" xml:space="preserve">
     <value>Campo obrigatorio</value>
   </data>
+  <data name="Next" xml:space="preserve">
+    <value>Seguinte</value>
+  </data>
+  <data name="photoDate" xml:space="preserve">
+    <value>Data</value>
+  </data>
+  <data name="photoId" xml:space="preserve">
+    <value>Id</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Anterior</value>
+  </data>
   <data name="searchButton" xml:space="preserve">
     <value>Procurar</value>
+  </data>
+  <data name="title" xml:space="preserve">
+    <value>Título</value>
   </data>
 </root>
