--- a/Web/App_GlobalResources/Common.gl.resx
+++ b/Web/App_GlobalResources/Common.gl.resx
@@ -120,11 +120,20 @@
   <data name="categoryType" xml:space="preserve">
     <value>Categoría</value>
   </data>
+  <data name="description" xml:space="preserve">
+    <value>Descrición</value>
+  </data>
+  <data name="loginName" xml:space="preserve">
+    <value>Nombre usuario</value>
+  </data>
   <data name="mandatoryField" xml:space="preserve">
     <value>Campo obrigatorio</value>
   </data>
   <data name="Next" xml:space="preserve">
     <value>Seguinte</value>
+  </data>
+  <data name="photo" xml:space="preserve">
+    <value>Foto</value>
   </data>
   <data name="photoDate" xml:space="preserve">
     <value>Data</value>
