--- a/Web/Pages/Photo/App_LocalResources/PhotoDetails.aspx.resx
+++ b/Web/Pages/Photo/App_LocalResources/PhotoDetails.aspx.resx
@@ -132,4 +132,13 @@
   <data name="Page.Title" xml:space="preserve">
     <value>Photogram - Página de Autenticación</value>
   </data>
+  <data name="btnDelete.Text" xml:space="preserve">
+    <value>Delete photo</value>
+  </data>
+  <data name="hlComments.Text" xml:space="preserve">
+    <value>See comments</value>
+  </data>
+  <data name="lnkUpdate.Text" xml:space="preserve">
+    <value>Modificar comentario</value>
+  </data>
 </root>
