añadido dar a like a foto

--- a/Web/Pages/Photo/App_LocalResources/PhotoDetails.aspx.resx
+++ b/Web/Pages/Photo/App_LocalResources/PhotoDetails.aspx.resx
@@ -141,4 +141,7 @@
   <data name="lnkUpdate.Text" xml:space="preserve">
     <value>Modificar comentario</value>
   </data>
+  <data name="btnLike.Text" xml:space="preserve">
+    <value>Like</value>
+  </data>
 </root>
