--- a/Web/Pages/User/App_LocalResources/Followers.aspx.es.resx
+++ b/Web/Pages/User/App_LocalResources/Followers.aspx.es.resx
@@ -117,34 +117,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="LblFollowedTrans.Text" xml:space="preserve">
-    <value>Seguidos</value>
+  <data name="btnLogin.Text" xml:space="preserve">
+    <value>Aceptar</value>
   </data>
-  <data name="lblFollowersTrans.Text" xml:space="preserve">
-    <value>Seguidores</value>
+  <data name="checkRememberPassword.Text" xml:space="preserve">
+    <value>Recordar mi contraseña (las cookies deben estar habilitadas)</value>
   </data>
-  <data name="lclHeaderImage.Text" xml:space="preserve">
-    <value>Foto</value>
+  <data name="lblLoginError.Text" xml:space="preserve">
+    <value>Usuario no encontrado</value>
   </data>
-  <data name="lclHeaderImageLink.Text" xml:space="preserve">
-    <value>Ver Imagen</value>
+  <data name="lblNoFollowers.Text" xml:space="preserve">
+    <value>Sin seguidores</value>
+  </data>
+  <data name="lblPasswordError.Text" xml:space="preserve">
+    <value>Contraseña incorrecta</value>
+  </data>
+  <data name="lclLogin.Text" xml:space="preserve">
+    <value>Usuario</value>
   </data>
   <data name="lclMenuExplanation.Text" xml:space="preserve">
-    <value>Mi perfil</value>
+    <value>Autenticación</value>
   </data>
-  <data name="lclTableImages.Text" xml:space="preserve">
-    <value>Imagenes</value>
+  <data name="lclPassword.Text" xml:space="preserve">
+    <value>Contraseña</value>
   </data>
-  <data name="lnkFolloweds.Text" xml:space="preserve">
-    <value>Seguidos</value>
-  </data>
-  <data name="lnkUpdate.Text" xml:space="preserve">
-    <value>Actualizar información de usuario</value>
+  <data name="lnkRegister.Text" xml:space="preserve">
+    <value>Registrarme (usuario no registrado)</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
-    <value>Photogram -  Mi perfil</value>
-  </data>
-  <data name="photo" xml:space="preserve">
-    <value>Foto</value>
+    <value>Photogram - Página de Autenticación</value>
   </data>
 </root>
