--- a/Web/Pages/User/App_LocalResources/MyProfile.aspx.gl.resx
+++ b/Web/Pages/User/App_LocalResources/MyProfile.aspx.gl.resx
@@ -126,8 +126,11 @@
   <data name="lclMenuExplanation.Text" xml:space="preserve">
     <value>Meu perfil</value>
   </data>
-  <data name="lnkFollowed.Text" xml:space="preserve">
+  <data name="lnkFolloweds.Text" xml:space="preserve">
     <value>Seguidos</value>
+  </data>
+  <data name="lnkFollowers.Text" xml:space="preserve">
+    <value>Seguidores</value>
   </data>
   <data name="lnkUpdate.Text" xml:space="preserve">
     <value>Actualizar información de usuario</value>
